# collabpaint

./: .gitignore  CMakeLists.txt  README.md
include/: App.hpp  BrushStroke.hpp  ClearScreen.hpp  Command.hpp  CompositeCommand.hpp  Draw.hpp  DrawBrush.hpp  DrawStroke.hpp  Eraser.hpp  EraserStroke.hpp  TCPClient.hpp  TCPServer.hpp  nuklear_sfml_gl2.h
milestones/0/: README.md
milestones/10/: README.md
milestones/4/: README.md
milestones/6/: README.md
milestones/7/: README.md
src/: App.cpp  BrushStroke.cpp  ClearScreen.cpp  Command.cpp  CompositeCommand.cpp  Draw.cpp  DrawBrush.cpp  DrawStroke.cpp  Eraser.cpp  EraserStroke.cpp  TCPClient.cpp  TCPServer.cpp  main.cpp
tests/: main_test.cpp
